Fizemos a do back end de criar uma sala
