# back-end/server.js
@@ -7,6 +7,7 @@ const outputJson = require("./swagger-output.json")
 import cors from 'cors'
 import routerAutenticacao from './routes/autenticacaoRoute.js'
 import routerUsuarios from './routes/usuarioRoute.js'
+import routerSala from './routes/salaRoute.js'
 
 const app = express()
 
@@ -18,6 +19,7 @@ app.use("/docs", swaggerUi.serve, swaggerUi.setup(outputJson))
 
 app.use("/auth", routerAutenticacao)
 app.use("/usuarios", routerUsuarios)
+app.use("/salas", routerSala)
 
 app.listen(5000, function() {
   console.log("Servidor Web em Funcionamento!");
